step-io-macros/tests/ui/complex_missing_name.stderr
error: missing `name = "..."`
 --> tests/ui/complex_missing_name.rs:5:1
  |
5 | #[step_entity_complex(pass = Pass1, required = ["PART"])]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `step_entity_complex` (in Nightly builds, run with -Z macro-backtrace for more info)
